--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,13 @@ body{
   font-size: 20px;
 }
 
-
+.list{
+  margin-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: left;
+  border-bottom : 1px solid #000;
+}
 
 
 
